    each copied file if a wildcard was used in the filename (Closes: #491627)
  * tagpending: Fix a typo in the help output. Thanks Thijs Kinkhorst.
    (Closes: #494131)

  [ Stefano Zacchiroli ]
  * bts: add support for the fake "gift" tag. It is to be used as a shorthand
    for the "gift" usertag, see http://wiki.debian.org/qa.debian.org/GiftTag

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Mon, 28 Jul 2008 20:06:49 +0100

devscripts (2.10.35) unstable; urgency=low

  * checkbashisms: Only flag "local x y" and "local foo=bar" when --posix is
    used, as the use of the constructs is likely to become policy compliant
    in the near future (see Policy bug #473019)
  * debcommit: When --diff is used, don't open an editor to confirm commit
    messages
  * po4a/po/fr.po: Update French manpage translations; thanks Nicolas FRANCOIS
    (Closes: #491001)
  * who-uploads: Call "gpg --verify" with LC_ALL set to C to ensure that
    the output is in the expected format (Closes: #492474)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 26 Jul 2008 21:57:20 +0100

devscripts (2.10.34) unstable; urgency=low

  * checkbashisms:
    + Match the use of "shell echo -n" and "if foo then echo -n"
    + Fix a thinko in the quoted-block detection (thankfully the effects were
      largely benign, unless one was attempting to check libtool...)
    + Fix false positives in the checks for "dirs", "popd", "pushd", "shopt"
      and "ulimit" and the "echo with unsafe backslash", brace expansion and
      invalid function name checks
    + Fix a false-positive in the "source script with arguments check"
    + Fix a false negative in the "function" check (Closes: #490223)
    + Treat """" as "" when removing quotes
    + Catch shell script wrappers which use "foo $0 $@ &\nexec true"
    + Don't treat '. "a b"' as a sourced script being passed arguments
    + Strip leading @s from makefile lines
  * debchange:
    + Also collapse UNRELEASED stanzas when -d is used